# imchenwen

./: .gitignore  CMakeLists.txt  NEWS.md  README.md  imchenwen.pro  index.html  qt.conf  vip.txt  vipmore.txt  websites.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  macos.yml  windows.yml
cmake/: FindMPV.cmake  MacOSXBundleInfo.plist.in  windows_metafile.rc.in
debian/: changelog  control  copyright
deprecated/: mainwindow.ui  resourcemodel.cpp
mac/: backgroundImage.tiff  macdeploy.sh  update-resolvers.sh
mac/en_US.lproj/: InfoPlist.strings
mac/zh_CN.lproj/: InfoPlist.strings
res/: com.dfordsoft.imchenwen.appdata.xml  com.github.coslyk.MoonPlayer.desktop
scripts/: copy_filelist.sh  deploy-macos-11.sh  deploy-macos-static-qt6.sh  deploy-macos.sh  deploy-windows-2019.sh  filelist.txt  mac-install-mpv.sh  win-install-mpv.bat  win-install-mpv.ps1  win_installer.iss
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.ui  accessManager.cpp  accessManager.h  application.cpp  application.h  browser.cpp  browserwindow.cpp  browserwindow.h  clipboard.h  config.cpp  config.h  danmakuLoader.h  dialogs.cpp  dialogs.h  downloader.cpp  downloader.h  downloaderAbstractItem.cpp  downloaderAbstractItem.h  downloaderHlsItem.cpp  downloaderHlsItem.h  downloaderItem.cpp  downloaderItem.h  fileDownloader.cpp  fileDownloader.h  historymodel.cpp  historymodel.h  imchenwen-win.rc  imchenwen.qrc  jsapiObject.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mpv.hpp  mpvObject.cpp  mpvObject.h  navigatormodel.cpp  navigatormodel.h  (+35 more)
(+382 files in other folders)
